[3단계 - 리팩터링] 시소(이경민) 미션 제출합니다. (#1035)
* refactor: HttpRequest 분리

* refactor: HttpResponse 분리

* refactor: 유틸 클래스로 책임 분리

* refactor: FrontController 도입하여 요청 처리

* test: 스레드 학습 테스트 진행

* feat: Response 조립 이후 수정하지 못하도록 수정

* fix: 누락된 return문 추가

* fix: QueryString 중복 파싱 로직 변경

* refactor: FrontController 인스턴스가 한 번만 생성되도록 수정

* refactor: HttpRequest 불변성 보장

- 쿠키 추가 로직 제거

* refactor: RequestLine의 Path 저장 방식 변경

* refactor: switch문 내부 enum 사용 방식 수정